syntax = "proto3";
package strangelove.horcrux;

import "strangelove/horcrux/node.proto";

option go_package = "github.com/strangelove-ventures/horcrux/src/proto";

// Connection to the remote signer (E.g the Sentry)
service Connector {
	rpc PubKey (PubKeyRequest) returns (PubKeyResponse) {}
	rpc Sign(strangelove.horcrux.SignBlockRequest) returns (strangelove.horcrux.SignBlockResponse) {}
}

message PubKeyRequest {
	string chain_id = 1;
}

message PubKeyResponse {
	bytes pub_key = 1;
}
